# requirement-auditor

./: .gitignore  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  local_configuration.toml  make.bat  usage.rst
requirement_auditor/: __init__.py  cli.py  db.py  exceptions.py  handlers.py  models.py  parsers.py  settings.py  utis.py
requirement_auditor/_legacy/: settings.py
requirement_auditor/_legacy/requirements/: parsing.py
requirement_auditor/config/: cli_commands.py  configuration.py
requirement_auditor/data/: req_db.json
requirement_auditor/db/: cli_commands.py  database.py  databases.py  managers.py
requirement_auditor/pypi/: clients.py  models.py
requirement_auditor/reqs_utilities/: db.py  models.py  parsers.py  req_db.json  updaters.py
requirement_auditor/requirements/: parsing.py
tests/: __init__.py  conftest.py  test_cli.py  test_db.py  test_handlers.py  test_models.py  test_parsers.py  test_requirement_auditor.py  test_requirementes_parsing.py  test_settings.py
tests/db/: test_cli_commands.py  test_databases.py  test_managers.py
tests/fixtures/: base.txt  req_db_10_reqs.json  requirements_dev.txt
tests/pypi/: test_clients.py
