[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Luis C. Berrocal <luis.berrocal.1942@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.10"
docxtpl = "^0.16.4"
openpyxl = "^3.0.10"
sqlmodel = "^0.0.8"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.990"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
factory-boy = "^3.2.1"
pytz = "^2022.6"
tox = "^3.27.1"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.2"
mkdocs-include-markdown-plugin = "^3.9.1"
mkdocs-material = "^8.5.10"
mkdocstrings = "^0.19.0"
mkdocs-autorefs = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
