[tool.poetry]
name = "requirement-auditor"
version = "2.0.2"
description = "Tool to keep track of used requirements."
authors = ["Luis C. Berrocal <luis.berrocal.1942@gmail.com>"]
readme = "README.md"
packages = [{ include = "requirement_auditor" }]

[tool.poetry.scripts]
requirement-auditor = 'requirement_auditor.cli:main'

[tool.poetry.dependencies]
python = "^3.10"
# sqlmodel = "^0.0.8"
click = "^8.1.3"
openpyxl = "^3.0.10"
pydantic = "^1.10.4"
johnnydep = "^1.17.5"
requests = "^2.28.2"
httpx = "^0.24.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"
flake8 = "^6.0.0"
flake8-docstrings = "^1.6.0"
factory-boy = "^3.2.1"
pytz = "^2022.7"
bump2version = "^1.0.1"
twine = "^4.0.2"
coverage = "^7.0.3"
tox = "^4.2.6"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
freezegun = "^1.2.2"


[tool.poetry.group.doc.dependencies]
mkdocs = "^1.4.2"
mkdocs-include-markdown-plugin = "^3.9.1"
mkdocs-material = "^8.5.10"
mkdocstrings = "^0.19.0"
mkdocs-autorefs = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
